test/compiler/neg/DupVars.abs
module DupVars;
{
    String s = "Hello";
    {
        String s = "World";
    }
}
